fix(atom/button): fix fullWidth link type button text is not centered

--- a/components/atom/button/src/index.scss
+++ b/components/atom/button/src/index.scss
@@ -175,6 +175,7 @@ $p-atom-button-large: $p-l !default;
 
   &--fullWidth {
     justify-content: center;
+    text-align: center;
     width: 100%;
   }
 
@@ -185,7 +186,6 @@ $p-atom-button-large: $p-l !default;
     }
   }
 
-  // Modifiers
   &--link {
     text-decoration: none;
   }
